; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_dc-capture.c_init_textures.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_dc-capture.c_init_textures.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dc_capture = type { i32, i32, i32, i32, i64 }

@GS_BGRA = common dso_local global i32 0, align 4
@GS_DYNAMIC = common dso_local global i32 0, align 4
@LOG_WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"[dc_capture_init] Failed to create textures\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dc_capture*)* @init_textures to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_textures(%struct.dc_capture* %0) #0 {
  %2 = alloca %struct.dc_capture*, align 8
  store %struct.dc_capture* %0, %struct.dc_capture** %2, align 8
  %3 = load %struct.dc_capture*, %struct.dc_capture** %2, align 8
  %4 = getelementptr inbounds %struct.dc_capture, %struct.dc_capture* %3, i32 0, i32 4
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %19

7:                                                ; preds = %1
  %8 = load %struct.dc_capture*, %struct.dc_capture** %2, align 8
  %9 = getelementptr inbounds %struct.dc_capture, %struct.dc_capture* %8, i32 0, i32 3
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.dc_capture*, %struct.dc_capture** %2, align 8
  %12 = getelementptr inbounds %struct.dc_capture, %struct.dc_capture* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* @GS_BGRA, align 4
  %15 = load i32, i32* @GS_DYNAMIC, align 4
  %16 = call i32 @gs_texture_create(i32 %10, i32 %13, i32 %14, i32 1, i32* null, i32 %15)
  %17 = load %struct.dc_capture*, %struct.dc_capture** %2, align 8
  %18 = getelementptr inbounds %struct.dc_capture, %struct.dc_capture* %17, i32 0, i32 1
  store i32 %16, i32* %18, align 4
  br label %29

19:                                               ; preds = %1
  %20 = load %struct.dc_capture*, %struct.dc_capture** %2, align 8
  %21 = getelementptr inbounds %struct.dc_capture, %struct.dc_capture* %20, i32 0, i32 3
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.dc_capture*, %struct.dc_capture** %2, align 8
  %24 = getelementptr inbounds %struct.dc_capture, %struct.dc_capture* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @gs_texture_create_gdi(i32 %22, i32 %25)
  %27 = load %struct.dc_capture*, %struct.dc_capture** %2, align 8
  %28 = getelementptr inbounds %struct.dc_capture, %struct.dc_capture* %27, i32 0, i32 1
  store i32 %26, i32* %28, align 4
  br label %29

29:                                               ; preds = %19, %7
  %30 = load %struct.dc_capture*, %struct.dc_capture** %2, align 8
  %31 = getelementptr inbounds %struct.dc_capture, %struct.dc_capture* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %37, label %34

34:                                               ; preds = %29
  %35 = load i32, i32* @LOG_WARNING, align 4
  %36 = call i32 @blog(i32 %35, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  br label %40

37:                                               ; preds = %29
  %38 = load %struct.dc_capture*, %struct.dc_capture** %2, align 8
  %39 = getelementptr inbounds %struct.dc_capture, %struct.dc_capture* %38, i32 0, i32 0
  store i32 1, i32* %39, align 8
  br label %40

40:                                               ; preds = %37, %34
  ret void
}

declare dso_local i32 @gs_texture_create(i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @gs_texture_create_gdi(i32, i32) #1

declare dso_local i32 @blog(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
